# sphractal

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docs/: Makefile  applicationsDemo.ipynb  basicDemo.ipynb  conf.py  example.ipynb  example.xyz  index.md  make.bat  surfVoxelBoxCnts.txt  surfVoxelIdxs.txt
docs/.virtual_documents/: example.ipynb
docs/outputs/: surfVoxelBoxCnts.txt  surfVoxelIdxs.txt
docs/outputs/boxCoords/: paracetamol_boxCoords.xyz
docs/outputs/surfPoints/: example_surfPoints.xyz  paracetamol_surfPoints.xyz
docs/outputs/surfVoxels/: exampleOT_surfVoxels.xyz  graphene_surfVoxels.xyz  paracetamol_surfVoxels.xyz
docs/surfPoints/: example_surfPoints.xyz
docs/surfVoxels/: example_surfVoxels.xyz
src/fbc/: 3DbinImBCcpu.cpp  3DbinImBCgpu.cpp  README.txt  bcCPU.cpp  bcCPU.h  bcCUDA2D.cu  bcCUDA2D.cuh  bcCUDA3D.cu  bcCUDA3D.cuh  bcCUDA4D.cu  bcCUDA4D.cuh  test.cpp
src/sphractal/: __init__.py  boxCnt.py  constants.py  datasets.py  surfExact.py  surfPointClouds.py  surfVoxel.py  utils.py
src/sphractal/data/: __init__.py  benchmarkOT1.xyz  benchmarkOT2.xyz  benchmarkOT3.xyz  benchmarkOT4.xyz  benchmarkOT5.xyz  benchmarkOT6.xyz  benchmarkOT7.xyz  benchmarkOT8.xyz  benchmarkOT9.xyz  benchmarkSP01.xyz  benchmarkSP03.xyz  benchmarkSP04.xyz  benchmarkSP05.xyz  benchmarkSP06.xyz  benchmarkSP07.xyz  benchmarkSP08.xyz  benchmarkSP09.xyz  benchmarkSP1.xyz  benchmarkSP10.xyz  benchmarkSP11.xyz  benchmarkSP13.xyz  benchmarkSP14.xyz  benchmarkSP15.xyz  benchmarkSP16.xyz  benchmarkSP17.xyz  benchmarkSP18.xyz  benchmarkSP6.xyz  caseStudyOTS1T000.xyz  caseStudyOTS1T323.xyz  caseStudyOTS1T523.xyz  caseStudyOTS2T000.xyz  caseStudyOTS2T323.xyz  caseStudyOTS2T523.xyz  caseStudyRDS1T523.xyz  caseStudyRDS2T000.xyz  caseStudyTHS1T000.xyz  caseStudyTHS1T323.xyz  caseStudyTHS1T523.xyz  caseStudyTHS2T000.xyz  (+20 more)
src/sphractal/pybind11/: example.cpp  pybindtest.cpp
tests/: fixtures.py  test_sphractal.py
